<resources>
    <string name="app_name">FunMaps</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_setting">设置</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_register">注册</string>
    <string name="login_logo">Hi~Heat</string>
    <string name="register_toolbar">注册账号</string>
    <string name="register_username">请输入账号</string>
    <string name="register_password">请输入密码</string>
    <string name="nav_setting">设置</string>
    <string name="mian_person_location">所在位置</string>
    <string name="main_person_rate">人流量</string>
    <string name="main_person_btn_heat">热力图</string>
    <string name="mian_person_btn_search">搜索</string>
    <string name="mian_local_text_list">排行</string>
    <string name="main_local_text_location">位置</string>
    <string name="main_local_text_rate">人流量</string>
    <string name="main_accounts">切换用户</string>
    <string name="mian_register">注册账户</string>

    <string name="firstpage">首页</string>
    <string name="nearby">附近</string>
    <string name="route">路线</string>

    <!--顶部-->
    <string name="action_settings">Settings</string>
    <string name="address">长沙理工大学(云塘校区)</string>
    <string name="s1">美食</string>
    <string name="s2">景点</string>
    <string name="s3">酒店</string>
    <string name="s4">加油站</string>
    <string name="s5">公交站</string>
    <string name="s6">地铁站</string>
    <string name="s7">银行</string>
    <string name="s8">电影院</string>
    <string name="s9">厕所</string>
    <string name="s10">商场</string>
    <string name="s11">医院</string>
    <string name="s12">更多</string>
    <string name="bottomtext1">日式风味豚骨拉面，周围有三家</string>
    <string name="bottomtext2">猪肚鸡火锅美食超值优惠，在咕咕鸡火锅店</string>
    <string name="appname1">大众点评</string>
    <string name="appname2">携程旅行</string>
    <string name="command">推荐</string>
    <string name="food">美食</string>
    <string name="sight">景点</string>
    <string name="hotel">酒店</string>

    <!--  天气查找  -->
    <string name="search_weather">检索天气</string>
    <string name="detail_weather">天气详情</string>

</resources>