<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CircumActivity">
    <!--底部页签导航栏-->

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/groupheader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/groupheader"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <RadioButton
            android:id="@+id/rbtnFirstpage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/firstpage"
            android:textColor="@color/fontcolorselector"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbtnNearby"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/nearby"
            android:textColor="@color/fontcolorselector"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbtnRoute"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/route"
            android:textColor="@color/fontcolorselector"
            android:textSize="18sp"
            android:visibility="visible" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>