<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="#F2F2F2"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#2BA1EF"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/register_toolbar"
                    android:textColor="#ffffff"/>

                <Button
                    android:id="@+id/register_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="取消"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"/>
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_register_edittext"
            android:hint="@string/register_username" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_register_edittext"
            android:hint="@string/register_password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/register_input"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="提交"
        android:textColor="#ffffff"
        android:background="@drawable/bg_register_button"/>



</LinearLayout>